# TaskManager

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  serializers.py
main/: admin.py  urls.py  views.py
main/migrations/: 0001_initial.py
main/models/: __init__.py  tags.py  tasks.py  user.py
task_manager/: settings.py  urls.py
test/: test_admin.py
